@startuml package design

package communication {
    component protocols {
        interface ProtocolService
        interface ProtocolServiceFactory
        interface Protocol
        interface ProtocolFactory
        interface ProtocolServer
        interface ProtocolServerFactory

        interface MessageQueue

        ProtocolServiceFactory *-- ProtocolService
        ProtocolFactory *-- Protocol
        ProtocolServerFactory *-- ProtocolServer

        ProtocolService o-- Protocol
        Protocol o-- ProtocolServer
    }
    component network {
        interface CloseableSocket {
            +close(): bool
        }
        interface ReceiverSocket {
            +receive(): Payload
        }
        interface SenderSocket {
            +send(payload: Payload): size_t
        }
        interface ServerSocket {
            +accept(): ConnectedSocket
            +bind(endpoint: Endpoint): bool
            +listen(): bool
        }
        interface ConnectedSocket

        CloseableSocket <|-- ServerSocket

        CloseableSocket <|-- ConnectedSocket
        ReceiverSocket <|-- ConnectedSocket
        SenderSocket <|-- ConnectedSocket
    }
    component server {
        interface Connection {
            +close(): bool
            +send(payload: Payload): void
        }
        interface Server
        interface ServerFactory {
            +create(): Server
        }
        interface DataLink {
            +push(payload: Payload): bool
        }

        ServerFactory *-- Server
        Server o-- ServerSocket
        Connection o-- ConnectedSocket
        Server o-- ProtocolServer
    }
}
@endstartuml
